[package]
name = "cryptocryptid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek ="4.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand = "0.8.5"
log = "0.4.20"
pretty_env_logger = "0.5.0"
sha2 = "0.10.8"
digest = "0.10.7"
sha256 = "1.4.0"
hex = "0.4.3"
